--- a/profile.html
+++ b/profile.html
@@ -682,7 +682,7 @@ if (msgBtn && msgCard) {
     box.appendChild(card);
   });
 }
-
+</script>
 <script>
   // 🔗 Новий Apps Script для перевірки PRO
   window.APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxcNd2wZwrtPm4jk1OdD41jSB_fUd6GTvZ9uFafnxfVTOA_VdbHjtk6l-crMov5qeLHzQ/exec";
