--- a/profile.html
+++ b/profile.html
@@ -546,8 +546,12 @@ supabase.auth.onAuthStateChange(async (event, session) => {
       const res = await fetch(`${window.APPS_SCRIPT_URL}?user_id=${encodeURIComponent(user.id)}`);
       const json = await res.json();
       if (json.isPro) {
-        const d = json.expireDate?.split("T")[0]?.split("-").reverse().join(".");
-        document.getElementById("pro-status").innerHTML = `✅ PRO активний до <b>${d}</b>`;
+        // Якщо дата вже у форматі 30.11.2025 — не перетворюємо
+        let d = json.expireDate;
+        if (d && d.includes("-")) {
+          d = d.split("T")[0].split("-").reverse().join(".");
+        }
+        document.getElementById("pro-status").innerHTML = `✅ PRO активний до <b>${d || "невідомо"}</b>`;
       } else {
         document.getElementById("pro-status").innerText = "❌ Без PRO";
       }
