--- a/index.html
+++ b/index.html
@@ -461,8 +461,112 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 
 
 <script src="auth.js"></script>
+<!-- === FOOTER === -->
+<footer class="footer-mini">
+  <p>© 2025 KinoSite • Всі права захищені 🙂</p>
+  <div class="footer-buttons">
+    <button class="btn btn-ghost" id="openContact">📩 Контакти</button>
+    <button class="btn btn-ghost" id="openRights">⚖️ Правовласникам</button>
+  </div>
+</footer>
+
+<!-- === МОДАЛКА: Контакти === -->
+<div id="contactModal" class="modal">
+  <div class="modal-content">
+    <h3>📩 Контакти</h3>
+    <p class="muted">Маєте пропозицію або питання? Напишіть нам:</p>
+    <form id="contactForm">
+      <input type="text" id="contactName" placeholder="Ваше імʼя" required>
+      <textarea id="contactMsg" placeholder="Ваше повідомлення" required></textarea>
+      <button type="submit" class="btn btn-primary">Надіслати</button>
+      <button type="button" class="btn btn-ghost" id="closeContact">Закрити</button>
+    </form>
+    <p id="contactStatus" class="status-text"></p>
+  </div>
+</div>
+
+<!-- === МОДАЛКА: Правовласникам === -->
+<div id="rightsModal" class="modal">
+  <div class="modal-content">
+    <h3>⚖️ Правовласникам</h3>
+    <p>
+      Усі матеріали на сайті <b>KinoSite</b> публікуються з відкритих джерел і призначені лише для ознайомлення.
+      Ми не зберігаємо файли на власних серверах. Якщо ви є правовласником і вважаєте, що якийсь контент порушує ваші права —
+      заповніть форму нижче, і ми оперативно розглянемо звернення.
+    </p>
+    <form id="dmcaForm">
+      <input type="text" id="dmcaName" placeholder="Ваше імʼя або компанія" required>
+      <input type="email" id="dmcaEmail" placeholder="Ваш email для звʼязку" required>
+      <textarea id="dmcaDetails" placeholder="Опишіть суть порушення або вставте посилання" required></textarea>
+      <button type="submit" class="btn btn-primary">Надіслати скаргу</button>
+      <button type="button" class="btn btn-ghost" id="closeRights">Закрити</button>
+    </form>
+    <p id="dmcaStatus" class="status-text"></p>
+  </div>
+</div>
+const BACKEND_URL = "https://relax-time2.onrender.com";
+
+// Відкриття / закриття модалок
+const contactModal = document.getElementById("contactModal");
+const rightsModal = document.getElementById("rightsModal");
+
+document.getElementById("openContact").onclick = () => contactModal.style.display = "flex";
+document.getElementById("openRights").onclick = () => rightsModal.style.display = "flex";
+document.getElementById("closeContact").onclick = () => contactModal.style.display = "none";
+document.getElementById("closeRights").onclick = () => rightsModal.style.display = "none";
+window.onclick = e => {
+  if (e.target === contactModal) contactModal.style.display = "none";
+  if (e.target === rightsModal) rightsModal.style.display = "none";
+};
+
+// 📩 Контактна форма
+document.getElementById("contactForm")?.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const name = document.getElementById("contactName").value.trim();
+  const msg = document.getElementById("contactMsg").value.trim();
+  const statusEl = document.getElementById("contactStatus");
+  statusEl.innerText = "⏳ Відправляю...";
+
+  try {
+    const res = await fetch(`${BACKEND_URL}/notify-payment`, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ source: "contact_form", name, message: msg })
+    });
+    if (!res.ok) throw new Error("Помилка відправки");
+    statusEl.innerText = "✅ Повідомлення відправлено!";
+    e.target.reset();
+  } catch {
+    statusEl.innerText = "❌ Не вдалося відправити. Спробуйте пізніше.";
+  }
+});
+
+// ⚖️ Форма для правовласників
+document.getElementById("dmcaForm")?.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const name = document.getElementById("dmcaName").value.trim();
+  const email = document.getElementById("dmcaEmail").value.trim();
+  const details = document.getElementById("dmcaDetails").value.trim();
+  const statusEl = document.getElementById("dmcaStatus");
+  statusEl.innerText = "⏳ Відправляю...";
+
+  try {
+    const res = await fetch(`${BACKEND_URL}/notify-payment`, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ source: "dmca_form", name, email, message: details })
+    });
+    if (!res.ok) throw new Error("Помилка відправки");
+    statusEl.innerText = "✅ Запит відправлено! Ми звʼяжемось найближчим часом.";
+    e.target.reset();
+  } catch {
+    statusEl.innerText = "❌ Не вдалося відправити. Спробуйте пізніше.";
+  }
+});
+
 </body>
 </html>
+
 
 
 
