--- a/index.html
+++ b/index.html
@@ -504,6 +504,8 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
     <p id="dmcaStatus" class="status-text"></p>
   </div>
 </div>
+
+<script>
 const BACKEND_URL = "https://relax-time2.onrender.com";
 
 // Відкриття / закриття модалок
@@ -563,9 +565,10 @@ document.getElementById("dmcaForm")?.addEventListener("submit", async (e) => {
     statusEl.innerText = "❌ Не вдалося відправити. Спробуйте пізніше.";
   }
 });
-
+</script>
 </body>
 </html>
+
 
 
 
