--- a/bookmarks.html
+++ b/bookmarks.html
@@ -71,5 +71,15 @@
     }
   </script>
 <script src="auth.js"></script>
+<div id="footer-placeholder"></div>
+<script>
+fetch("footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer-placeholder").innerHTML = html;
+  });
+</script>
+
 </body>
+
 </html>
