--- a/category.html
+++ b/category.html
@@ -313,5 +313,14 @@ initCategoryPage();
 
 </script>
 <script src="auth.js"></script>
+<div id="footer-placeholder"></div>
+<script>
+fetch("footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer-placeholder").innerHTML = html;
+  });
+</script>
+
 </body>
 </html>
