--- a/collection.html
+++ b/collection.html
@@ -173,5 +173,14 @@ body {
 }
 </style>
 <script src="auth.js"></script>
+<div id="footer-placeholder"></div>
+<script>
+fetch("footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer-placeholder").innerHTML = html;
+  });
+</script>
+
 </body>
 </html>
