--- a/collections.html
+++ b/collections.html
@@ -192,5 +192,14 @@ const collections = [
 
 </style>
 <script src="auth.js"></script>
+<div id="footer-placeholder"></div>
+<script>
+fetch("footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer-placeholder").innerHTML = html;
+  });
+</script>
+
 </body>
 </html>
