--- a/profile.html
+++ b/profile.html
@@ -963,6 +963,14 @@ window.onclick = (e) => {
 };
 </script>
 
+<div id="footer-placeholder"></div>
+<script>
+fetch("footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer-placeholder").innerHTML = html;
+  });
+</script>
 
 
 </body>
