--- a/search.html
+++ b/search.html
@@ -167,5 +167,14 @@
   </script>
 
   <script src="auth.js"></script>
+<div id="footer-placeholder"></div>
+<script>
+fetch("footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer-placeholder").innerHTML = html;
+  });
+</script>
+
 </body>
 </html>
