--- a/series.html
+++ b/series.html
@@ -551,5 +551,14 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 
 <script src="auth.js"></script>
+<div id="footer-placeholder"></div>
+<script>
+fetch("footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer-placeholder").innerHTML = html;
+  });
+</script>
+
 </body>
 </html>
