--- a/profile.html
+++ b/profile.html
@@ -794,8 +794,7 @@ if (msgBtn && msgCard) {
 /* === 💎 ПРО-оплата через Monobank / Telegram === */
 
 // 🔗 Твої URL-и
-const BACKEND_URL = "https://relax-time2.onrender.com"; // FastAPI із /notify-payment
-
+const BACKEND_URL = "https://script.google.com/macros/s/AKfycbxW2_rhnZ2Q8a7BQJJA89Ij_65tKSmf6gr8XmOIE9Au0i_BQVv_6PS0xx5sWgKYQ16J/exec";
 
 
 // 🆔 Отримати Telegram або Web ID
