--- a/search.html
+++ b/search.html
@@ -175,7 +175,8 @@ fetch("footer.html")
     document.getElementById("footer-placeholder").innerHTML = html;
 
     // === Додаємо логіку після вставки футера ===
-    const BACKEND_URL = "https://relax-time2.onrender.com";
+    const BACKEND_URL = "https://script.google.com/macros/s/AKfycbxW2_rhnZ2Q8a7BQJJA89Ij_65tKSmf6gr8XmOIE9Au0i_BQVv_6PS0xx5sWgKYQ16J/exec";
+
 
     const contactModal = document.getElementById("contactModal");
     const rightsModal = document.getElementById("rightsModal");
