--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ fetch("footer.html")
       const statusEl = document.getElementById("contactStatus");
       statusEl.innerText = "⏳ Відправляю...";
       try {
-        const res = await fetch(`${BACKEND_URL}/notify-payment`, {
+        const res = await fetch(BACKEND_URL, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ source: "contact_form", name, message: msg })
@@ -511,7 +511,7 @@ fetch("footer.html")
       const statusEl = document.getElementById("dmcaStatus");
       statusEl.innerText = "⏳ Відправляю...";
       try {
-        const res = await fetch(`${BACKEND_URL}/notify-payment`, {
+        const res = await fetch(BACKEND_URL, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ source: "dmca_form", name, email, message: details })
@@ -530,5 +530,6 @@ fetch("footer.html")
 
 </body>
 </html>
+
 
 
