--- a/footer.html
+++ b/footer.html
@@ -40,3 +40,68 @@
     <p id="dmcaStatus" class="status-text"></p>
   </div>
 </div>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const BACKEND_URL = "https://script.google.com/macros/s/AKfycbxW2_rhnZ2Q8a7BQJJA89Ij_65tKSmf6gr8XmOIE9Au0i_BQVv_6PS0xx5sWgKYQ16J/exec";
+
+  const contactModal = document.getElementById("contactModal");
+  const rightsModal = document.getElementById("rightsModal");
+
+  // Відкриття / закриття
+  document.getElementById("openContact")?.addEventListener("click", () => contactModal.style.display = "flex");
+  document.getElementById("openRights")?.addEventListener("click", () => rightsModal.style.display = "flex");
+  document.getElementById("closeContact")?.addEventListener("click", () => contactModal.style.display = "none");
+  document.getElementById("closeRights")?.addEventListener("click", () => rightsModal.style.display = "none");
+  window.addEventListener("click", (e) => {
+    if (e.target === contactModal) contactModal.style.display = "none";
+    if (e.target === rightsModal) rightsModal.style.display = "none";
+  });
+
+  // Контактна форма
+  document.getElementById("contactForm")?.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const name = document.getElementById("contactName").value.trim();
+    const msg = document.getElementById("contactMsg").value.trim();
+    const statusEl = document.getElementById("contactStatus");
+    statusEl.innerText = "⏳ Відправляю...";
+    try {
+      const res = await fetch(BACKEND_URL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ source: "contact_form", name, message: msg })
+      });
+      const data = await res.json();
+      if (data.ok) {
+        statusEl.innerText = "✅ Повідомлення відправлено!";
+        e.target.reset();
+      } else throw new Error();
+    } catch {
+      statusEl.innerText = "❌ Не вдалося відправити. Спробуйте пізніше.";
+    }
+  });
+
+  // Форма для правовласників
+  document.getElementById("dmcaForm")?.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const name = document.getElementById("dmcaName").value.trim();
+    const email = document.getElementById("dmcaEmail").value.trim();
+    const details = document.getElementById("dmcaDetails").value.trim();
+    const statusEl = document.getElementById("dmcaStatus");
+    statusEl.innerText = "⏳ Відправляю...";
+    try {
+      const res = await fetch(BACKEND_URL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ source: "dmca_form", name, email, message: details })
+      });
+      const data = await res.json();
+      if (data.ok) {
+        statusEl.innerText = "✅ Запит відправлено! Ми зв’яжемося найближчим часом.";
+        e.target.reset();
+      } else throw new Error();
+    } catch {
+      statusEl.innerText = "❌ Не вдалося відправити. Спробуйте пізніше.";
+    }
+  });
+});
+</script>
