--- a/index.html
+++ b/index.html
@@ -461,75 +461,14 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 <script>
 fetch("footer.html")
   .then(res => res.text())
-  .then(html => {
-    document.getElementById("footer-placeholder").innerHTML = html;
-
-    // === Додаємо логіку після вставки футера ===
-    const BACKEND_URL = "https://script.google.com/macros/s/AKfycbxW2_rhnZ2Q8a7BQJJA89Ij_65tKSmf6gr8XmOIE9Au0i_BQVv_6PS0xx5sWgKYQ16J/exec";
-
-
-    const contactModal = document.getElementById("contactModal");
-    const rightsModal = document.getElementById("rightsModal");
-
-    // Відкриття / закриття
-    document.getElementById("openContact").onclick = () => contactModal.style.display = "flex";
-    document.getElementById("openRights").onclick = () => rightsModal.style.display = "flex";
-    document.getElementById("closeContact").onclick = () => contactModal.style.display = "none";
-    document.getElementById("closeRights").onclick = () => rightsModal.style.display = "none";
-    window.onclick = e => {
-      if (e.target === contactModal) contactModal.style.display = "none";
-      if (e.target === rightsModal) rightsModal.style.display = "none";
-    };
-
-    // Контактна форма
-    document.getElementById("contactForm")?.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const name = document.getElementById("contactName").value.trim();
-      const msg = document.getElementById("contactMsg").value.trim();
-      const statusEl = document.getElementById("contactStatus");
-      statusEl.innerText = "⏳ Відправляю...";
-      try {
-        const res = await fetch(BACKEND_URL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ source: "contact_form", name, message: msg })
-        });
-        if (!res.ok) throw new Error();
-        statusEl.innerText = "✅ Повідомлення відправлено!";
-        e.target.reset();
-      } catch {
-        statusEl.innerText = "❌ Не вдалося відправити. Спробуйте пізніше.";
-      }
-    });
-
-    // Правовласники
-    document.getElementById("dmcaForm")?.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const name = document.getElementById("dmcaName").value.trim();
-      const email = document.getElementById("dmcaEmail").value.trim();
-      const details = document.getElementById("dmcaDetails").value.trim();
-      const statusEl = document.getElementById("dmcaStatus");
-      statusEl.innerText = "⏳ Відправляю...";
-      try {
-        const res = await fetch(BACKEND_URL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ source: "dmca_form", name, email, message: details })
-        });
-        if (!res.ok) throw new Error();
-        statusEl.innerText = "✅ Запит відправлено! Ми зв’яжемося найближчим часом.";
-        e.target.reset();
-      } catch {
-        statusEl.innerText = "❌ Не вдалося відправити. Спробуйте пізніше.";
-      }
-    });
-  });
+  .then(html => document.getElementById("footer-placeholder").innerHTML = html);
 </script>
 
 
 
 </body>
 </html>
+
 
 
 
