--- a/footer.html
+++ b/footer.html
@@ -1,42 +1,14 @@
-<footer class="footer-mini">
-  <p>© 2025 KinoSite • Всі права захищені 🙂</p>
-  <div class="footer-buttons">
-    <button class="btn btn-ghost" id="openContact">📩 Контакти</button>
-    <button class="btn btn-ghost" id="openRights">⚖️ Правовласникам</button>
-  </div>
-</footer>
+<form action="https://formspree.io/f/mkgpqaav" method="POST" accept-charset="UTF-8" id="contactForm">
+  <input type="text" name="name" id="contactName" placeholder="Ваше імʼя" required>
+  <textarea name="message" id="contactMsg" placeholder="Ваше повідомлення" required></textarea>
 
-<!-- === МОДАЛКА: Контакти === -->
-<div id="contactModal" class="modal">
-  <div class="modal-content">
-    <h3>📩 Контакти</h3>
-    <p class="muted">Маєте пропозицію або питання? Напишіть нам:</p>
-    <form id="contactForm">
-      <input type="text" id="contactName" placeholder="Ваше імʼя" required>
-      <textarea id="contactMsg" placeholder="Ваше повідомлення" required></textarea>
-      <button type="submit" class="btn btn-primary">Надіслати</button>
-      <button type="button" class="btn btn-ghost" id="closeContact">Закрити</button>
-    </form>
-    <p id="contactStatus" class="status-text"></p>
-  </div>
-</div>
+  <!-- службові поля -->
+  <input type="hidden" name="_subject" value="📩 Повідомлення з KinoSite">
+  <input type="hidden" name="_language" value="uk">
+  <input type="hidden" name="_next" value="https://kino-site.top/?sent=contact#contacts">
+  <input type="text" name="_gotcha" style="display:none">
 
-<!-- === МОДАЛКА: Правовласникам === -->
-<div id="rightsModal" class="modal">
-  <div class="modal-content">
-    <h3>⚖️ Правовласникам</h3>
-    <p>
-      Усі матеріали на сайті <b>KinoSite</b> публікуються з відкритих джерел і призначені лише для ознайомлення.
-      Ми не зберігаємо файли на наших серверах. Якщо ви є правовласником і вважаєте, що якийсь контент порушує ваші права —
-      заповніть форму нижче, і ми оперативно розглянемо звернення.
-    </p>
-    <form id="dmcaForm">
-      <input type="text" id="dmcaName" placeholder="Ваше імʼя або компанія" required>
-      <input type="email" id="dmcaEmail" placeholder="Ваш email для звʼязку" required>
-      <textarea id="dmcaDetails" placeholder="Опишіть суть порушення або вставте посилання" required></textarea>
-      <button type="submit" class="btn btn-primary">Надіслати скаргу</button>
-      <button type="button" class="btn btn-ghost" id="closeRights">Закрити</button>
-    </form>
-    <p id="dmcaStatus" class="status-text"></p>
-  </div>
-</div>
+  <button type="submit" class="btn btn-primary">Надіслати</button>
+  <button type="button" class="btn btn-ghost" id="closeContact">Закрити</button>
+</form>
+<p id="contactStatus" class="status-text"></p>
