--- a/footer.html
+++ b/footer.html
@@ -25,9 +25,7 @@
     </div>
   </div>
 
-  <p class="copyright">
-    © 2025 KinoSite. Усі права захищені.
-  </p>
+  <p class="copyright">© 2025 KinoSite. Усі права захищені.</p>
 </footer>
 
 <!-- === 📩 МОДАЛЬНЕ ВІКНО "КОНТАКТИ" === -->
@@ -43,7 +41,6 @@
       <button type="button" class="btn btn-ghost" id="closeContact">Закрити</button>
     </form>
     <p id="contactStatus" class="status-text"></p>
-
   </div>
 </div>
 
@@ -51,18 +48,15 @@
 <div id="rightsModal" class="modal">
   <div class="modal-content">
     <h3>⚖️ Правовласникам</h3>
-    <p>Якщо ви вважаєте, що якийсь матеріал порушує ваші права, заповніть форму нижче.</p>
+    <p>Якщо ви вважаєте, що якийсь матеріал порушує ваші права, заповніть форму нижче:</p>
 
     <form id="dmcaForm">
       <input type="text" name="name" id="dmcaName" placeholder="Імʼя / Компанія" required>
       <input type="email" name="_replyto" id="dmcaEmail" placeholder="Email для звʼязку" required>
       <textarea name="message" id="dmcaDetails" placeholder="Опишіть, що потрібно видалити (посилання або ID)" required></textarea>
-    
       <button type="submit" class="btn btn-primary">Надіслати</button>
       <button type="button" class="btn btn-ghost" id="closeRights">Закрити</button>
     </form>
     <p id="dmcaStatus" class="status-text"></p>
-
-  
   </div>
 </div>
