--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,171 @@
-<footer>
-  <div class="footer-container">
+<!-- === 💎 СТИЛЬНИЙ ФУТЕР KINOSITE === -->
+<style>
+/* === НОВИЙ СТИЛЬ ФУТЕРА === */
+.kino-footer {
+  background: radial-gradient(circle at top, #0e0f12 0%, #050507 100%);
+  color: #d6d6d6;
+  text-align: center;
+  padding: 45px 25px;
+  border-top: 1px solid rgba(0, 255, 255, 0.15);
+  box-shadow: 0 -6px 18px rgba(0,255,255,0.06);
+  font-family: "Inter", sans-serif;
+}
+
+.footer-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 70px;
+  margin-bottom: 25px;
+}
+
+.footer-column {
+  max-width: 420px;
+}
+
+.footer-column h4 {
+  color: #00fff2;
+  font-weight: 600;
+  margin-bottom: 12px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-shadow: 0 0 10px rgba(0,255,255,0.4);
+}
+
+.footer-column p {
+  font-size: 15px;
+  line-height: 1.6;
+  color: #bfbfbf;
+}
+
+.footer-column a {
+  color: #00fff2;
+  text-decoration: none;
+  font-weight: 500;
+  transition: 0.2s;
+}
+
+.footer-column a:hover {
+  text-shadow: 0 0 12px #00fff2, 0 0 24px rgba(0,255,255,0.6);
+}
+
+.copyright {
+  color: #888;
+  font-size: 14px;
+  margin-top: 25px;
+}
+
+.accent {
+  color: #00fff2;
+}
+
+/* === МОДАЛЬНІ ВІКНА === */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: #111218;
+  border: 1px solid rgba(0,255,255,0.2);
+  border-radius: 14px;
+  padding: 25px 30px;
+  width: 90%;
+  max-width: 460px;
+  text-align: left;
+  color: #eee;
+  box-shadow: 0 0 20px rgba(0,255,255,0.15);
+}
+
+.modal-content h3 {
+  color: #00fff2;
+  margin-bottom: 12px;
+  text-shadow: 0 0 10px rgba(0,255,255,0.3);
+}
+
+.modal-content p {
+  color: #ccc;
+  margin-bottom: 15px;
+  font-size: 15px;
+}
+
+.modal-content input,
+.modal-content textarea {
+  width: 100%;
+  padding: 10px 12px;
+  border-radius: 8px;
+  border: 1px solid rgba(0,255,255,0.25);
+  background: rgba(15,15,20,0.85);
+  color: #fff;
+  margin-bottom: 10px;
+  font-size: 14px;
+  resize: none;
+}
+
+.modal-content input:focus,
+.modal-content textarea:focus {
+  outline: none;
+  box-shadow: 0 0 10px rgba(0,255,255,0.4);
+}
+
+.btn {
+  padding: 10px 18px;
+  border-radius: 8px;
+  font-size: 15px;
+  cursor: pointer;
+  border: none;
+}
+
+.btn-primary {
+  background: linear-gradient(90deg, #00fff2, #00bfb2);
+  color: #000;
+  font-weight: 600;
+  transition: 0.25s;
+}
+
+.btn-primary:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px rgba(0,255,255,0.6);
+}
+
+.btn-ghost {
+  background: transparent;
+  color: #ccc;
+  border: 1px solid rgba(255,255,255,0.2);
+  margin-left: 8px;
+  transition: 0.25s;
+}
+
+.btn-ghost:hover {
+  color: #00fff2;
+  border-color: #00fff2;
+  box-shadow: 0 0 12px rgba(0,255,255,0.4);
+}
+
+.status-text {
+  margin-top: 10px;
+  font-size: 14px;
+  text-align: center;
+  color: #00fff2;
+}
+</style>
+
+<!-- === HTML ФУТЕРА === -->
+<footer class="kino-footer">
+  <div class="footer-grid">
     <div class="footer-column">
       <h4>Про проєкт</h4>
       <p>
-        KinoSite — це зручна платформа для перегляду фільмів і серіалів
-        українською мовою. Ми підтримуємо розвиток україномовного контенту.
+        <span class="accent">KinoSite</span> — це зручна платформа для перегляду фільмів і серіалів українською мовою. 
+        Ми підтримуємо розвиток україномовного контенту та чесний перегляд без піратства.
       </p>
     </div>
 
@@ -15,17 +176,9 @@
         <li><a href="#" id="openRights">⚖️ Правовласникам</a></li>
       </ul>
     </div>
-
-    <div class="footer-column">
-      <h4>Ми у соцмережах</h4>
-      <div class="social-links">
-        <a href="https://t.me/RelaxBoxMedia2" target="_blank">Telegram</a>
-        <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-      </div>
-    </div>
   </div>
 
-  <p class="copyright">© 2025 KinoSite. Усі права захищені.</p>
+  <p class="copyright">© 2025 <span class="accent">KinoSite</span>. Усі права захищені.</p>
 </footer>
 
 <!-- === 📩 МОДАЛЬНЕ ВІКНО "КОНТАКТИ" === -->
