--- a/film.html
+++ b/film.html
@@ -1055,6 +1055,10 @@ async function loadRecommendedFilms(title, genre) {
 
 
 </div>
+<script>
+  window.APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwUULSEmTKFORqOa3VwnQijTmNGw7Mt8bFd82G_HR7xwPSNlarMzE3Tmyrn1nju5WVPbA/exec";
+</script>
+  
 <script src="auth.js"></script>
 <div id="footer-placeholder"></div>
 <script>
