--- a/multseries.html
+++ b/multseries.html
@@ -498,40 +498,41 @@
     document.getElementById("seriesImdb").textContent  = first.imdb  || "—";
     document.getElementById("seriesDesc").textContent  = first.description || "Опис відсутній";
 
-        // 🧩 Перевірка PRO-доступу
-    const isProSeries = String(first.pro_access || '').toUpperCase() === 'PRO';
-    if (isProSeries) {
-      const user = JSON.parse(localStorage.getItem('telegram_user') || 'null');
-      const userId = user?.id ? String(user.id) : null;
-      let hasPro = false;
+    // 🧩 Перевірка PRO-доступу для мультсеріалів
+const isProCartoon = String(first.pro_access || '').toUpperCase() === 'PRO';
+if (isProCartoon) {
+  const user = JSON.parse(localStorage.getItem('telegram_user') || 'null');
+  const userId = user?.id ? String(user.id) : null;
+  let hasPro = false;
 
-      try {
-        const resp = await fetch(`https://script.google.com/macros/s/AKfycbwUULSEmTKFORqOa3VwnQijTmNGw7Mt8bFd82G_HR7xwPSNlarMzE3Tmyrn1nju5WVPbA/exec?user_id=${encodeURIComponent(userId)}`);
-        const json = await resp.json();
-        hasPro = json?.isPro === true;
-      } catch (e) {
-        console.warn('Помилка перевірки PRO:', e);
-      }
+  try {
+    const resp = await fetch(`https://script.google.com/macros/s/AKfycbwUULSEmTKFORqOa3VwnQijTmNGw7Mt8bFd82G_HR7xwPSNlarMzE3Tmyrn1nju5WVPbA/exec?user_id=${encodeURIComponent(userId)}`);
+    const json = await resp.json();
+    hasPro = json?.isPro === true;
+  } catch (e) {
+    console.warn('Помилка перевірки PRO:', e);
+  }
 
-      if (!hasPro) {
-        const playerBox = document.querySelector('.player-box');
-        playerBox.innerHTML = `
-          <div style="
-            background:#000;
-            color:#00fff2;
-            text-align:center;
-            padding:40px;
-            border-radius:12px;
-            border:1px solid rgba(0,255,255,0.3);
-            box-shadow:0 0 30px rgba(0,255,255,0.15);
-          ">
-            💎 Цей серіал доступний лише для PRO користувачів.<br><br>
-            <a href="profile.html" style="color:#fff;text-decoration:underline;">Отримати PRO</a>
-          </div>
-        `;
-        return; // ❗ зупиняємо виконання, не показуємо плеєр
-      }
-    }
+  if (!hasPro) {
+    const playerBox = document.querySelector('.player-box');
+    playerBox.innerHTML = `
+      <div style="
+        background:#000;
+        color:#00fff2;
+        text-align:center;
+        padding:40px;
+        border-radius:12px;
+        border:1px solid rgba(0,255,255,0.3);
+        box-shadow:0 0 30px rgba(0,255,255,0.15);
+      ">
+        💎 Цей мультсеріал доступний лише для PRO користувачів.<br><br>
+        <a href="profile.html" style="color:#fff;text-decoration:underline;">Отримати PRO</a>
+      </div>
+    `;
+    return;
+  }
+}
+
 
 
     // встановлюємо перше джерело
