--- a/multseries.html
+++ b/multseries.html
@@ -121,7 +121,16 @@
       transform: scale(1.05);
     }
 
-    .series-title{font-size:36px;color:#00fff2;text-shadow:0 0 12px rgba(0,255,255,.35);font-weight:700;margin:0 0 10px}
+    .series-title {
+      font-size: 38px;
+      color: #00fff2;
+      text-shadow: 0 0 14px rgba(0,255,255,.35);
+      font-weight: 700;
+      margin: 40px 0 18px; /* ✅ відступ зверху і трохи знизу */
+      text-align: center;  /* ✅ щоб назва була по центру */
+      letter-spacing: 0.5px;
+    }
+
     .series-meta{margin-top:12px;background:#101010;border:1px solid rgba(255,255,255,.06);border-radius:10px;padding:10px}
     .series-meta div{display:flex;justify-content:space-between;background:#151515;color:#ddd;padding:7px 10px;border-radius:6px;margin-bottom:6px}
     .series-right{flex:2;min-width:420px}
