--- a/multseries.html
+++ b/multseries.html
@@ -121,15 +121,16 @@
       transform: scale(1.05);
     }
 
-    .series-title {
-      font-size: 38px;
+   .series-title {
+      font-size: 34px;
       color: #00fff2;
-      text-shadow: 0 0 14px rgba(0,255,255,.35);
+      text-shadow: 0 0 10px rgba(0,255,255,.35);
       font-weight: 700;
-      margin: 40px 0 18px; /* ✅ відступ зверху і трохи знизу */
-      text-align: center;  /* ✅ щоб назва була по центру */
-      letter-spacing: 0.5px;
+      margin: 30px 0 10px 10px; /* 🔸 трохи вниз від шапки, і вирівняно з постером */
+      text-align: left;
+      letter-spacing: 0.4px;
     }
+
 
     .series-meta{margin-top:12px;background:#101010;border:1px solid rgba(255,255,255,.06);border-radius:10px;padding:10px}
     .series-meta div{display:flex;justify-content:space-between;background:#151515;color:#ddd;padding:7px 10px;border-radius:6px;margin-bottom:6px}
